<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".anadir"
    android:background="@color/purple_700"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dia"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="89dp">

        <TextView

            android:id="@+id/tvdia"
            android:layout_width="210dp"
            android:layout_height="26dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="212dp"
            android:text="@string/dia"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnAñadir"
            android:layout_width="178dp"
            android:layout_height="52dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="116dp"
            android:background="@drawable/shape2"
            android:backgroundTint="#615D5D"
            android:fontFamily="@font/alef"
            android:text="Añadir"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etrutina" />

        <EditText
            android:id="@+id/etrutina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="97dp"
            android:layout_marginTop="444dp"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <TextView

            android:id="@+id/tvrutina"
            android:layout_width="210dp"
            android:layout_height="26dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="412dp"
            android:text="@string/rutina"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etGrupo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="97dp"
            android:layout_marginTop="344dp"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <TextView

            android:id="@+id/tvGrupo"
            android:layout_width="210dp"
            android:layout_height="26dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="312dp"
            android:text="@string/grupo"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etdia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="97dp"
            android:layout_marginTop="244dp"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="201dp"
            android:layout_height="239dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="104dp"
            android:src="@drawable/logotipo_deportes_pesas_negro_y_naranja__1__removebg_preview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>